2004-11-21 Bart Hakvoort  <gparted@users.sf.net>

	* Again way too many chances to create a detailed entry (i'm glad i'm the only dev atm :P ).
	  Resizing of ext2/3 works perfect now. I've even tested it on the partition holding my SG seasons =)
	  Implemented checking of filesystems (only internally used atm).
	  Done some overall tweaking, finetuning etc.. release 0.0.7 is getting shape.

2004-11-19 Bart Hakvoort  <gparted@users.sf.net>

	* include/Device.h,
	  src/Device.cc: Removed bool Get_Any_Busy() in favor of public bool busy which is set in gparted_core.
	  This also fixed a small bug with incorrect mountdetection of logical partitions.
	  Also added a Reset() function to properly reset the contents of a device. to zero/empty .
	* include/GParted_Core.h,
	  src/GParted_Core.cc: 'busyness' of a device is now determined in get_devices().
	  Renamed get_partitions() to set_device_partitions to reflect its proper function.
	  When a new partition is created to contain a copied filesystem the size is now properly set. This fixes
	  a very annoying bug which no one knew about except for me =) .
	* src/Win_GParted.cc: use boolean busy from device instead of Get_Any_Busy() .

2004-11-17 Bart Hakvoort  <gparted@users.sf.net>

	* src/ext3.cc: availability of 'tune2fs' command wasn't detected correctly. fixed
	* src/fat32.cc: make use of dosfs tools (mkdosfs -F32) instead of libparted's Fat-creator.
	
2004-11-17 Bart Hakvoort  <gparted@users.sf.net>

	* Rewrote a large part of gparteds internal code. Filesystemssupport is now much more separated from the rest of gparted and
	  adding support for other filesystems should be a piece of cake now (hope that's true :P)
	  It still needs a lot of love, but the foundations are laid =)

2004-11-07 Bart Hakvoort  <gparted@users.sf.net>

	* include/Operation.h,
	  src/Operation.cc: make use of reference arguments instead of return values in some functions.