@@ -1,3 +1,10 @@
+2004-11-22 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/ext2.cc,
+	  src/ext3.cc: removed ':' from Blocksize scan.
+	* src/reiserfs.cc: dumped progsreiserfs. From now on gparted uses the official namesystools (reiserfsprogs)
+	  this resulted in much more reliable creation en resizing of reiserfs filesystems.
+
 2004-11-21 Bart Hakvoort  <gparted@users.sf.net>
 
 	* Again way too many chances to create a detailed entry (i'm glad i'm the only dev atm :P ).
